[package]
name = "rez-next-bind"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "rez bind implementation for rez-next - bind system tools as rez packages"
license.workspace = true
repository.workspace = true
keywords = ["rez", "bind", "package-manager"]

[dependencies]
rez-next-common = { version = "0.3.0", path = "../rez-next-common" }
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
