[package]
name = "rez-next-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Build system for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-next-common = { version = "0.3.4", path = "../rez-next-common" } # x-release-please-version
rez-next-version = { version = "0.3.4", path = "../rez-next-version" } # x-release-please-version
rez-next-package = { version = "0.3.4", path = "../rez-next-package" } # x-release-please-version
rez-next-context = { version = "0.3.4", path = "../rez-next-context" } # x-release-please-version
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing = "0.1"

uuid = { version = "1.17", features = ["v4", "serde"] }
url = "2.5"
reqwest = { version = "0.13", features = ["stream"] }
async-trait = "0.1"
sha2 = "0.11"
hex = "0.4"
flate2 = "1.1"
tar = "0.4"
zip = "8.0"

[features]
git = ["dep:git2"]
default = ["git"]

[dependencies.git2]
version = "0.20"
optional = true
features = ["vendored-libgit2", "vendored-openssl"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
