[package]
name = "rez-next-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Intelligent caching system for rez-next with multi-level cache and predictive preheating"
license = "Apache-2.0"
repository = "https://github.com/loonghao/rez-next"
keywords = ["rez", "cache", "performance", "intelligent", "multi-level"]
categories = ["caching", "development-tools"]

[dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# High-performance dependencies
dashmap = "6.1"

# Async and concurrency
async-trait = "0.1"

# Error handling
thiserror = "2.0"

# System utilities
num_cpus = "1.17"
rand = "0.10"
tracing.workspace = true

# Internal dependencies
rez-next-common = { version = "0.3.0", path = "../rez-next-common" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = ["multi-level", "predictive"]
multi-level = []
predictive = []
monitoring = []

[lints]
workspace = true
