[package]
name = "rez-next-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and types for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "rez_next_common"
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
