[package]
name = "rez-next-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for Rez package manager"
repository.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# External dependencies
toml = "1.0"
json5 = "1.0"
dirs = "6.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = { workspace = true }
