[package]
name = "rez-next-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Context management and environment generation for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-next-common = { version = "0.3.0", path = "../rez-next-common" }
rez-next-version = { version = "0.3.0", path = "../rez-next-version" }
rez-next-package = { version = "0.3.0", path = "../rez-next-package" }
rez-next-rex = { version = "0.3.0", path = "../rez-next-rex" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde_yaml = "0.9"
base64 = "0.22"
whoami = "2.1"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
