[package]
name = "rez-next-explicit"
version = "0.1.0"
edition = "2021"
description = "Explicit package support for rez-next"
authors = ["loonghao"]
license = "Apache-2.0"

[dependencies]
rez-next-common = { path = "../rez-next-common" }
rez-next-package = { path = "../rez-next-package" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
