[package]
name = "rez-next-explicit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Explicit package support for rez-next"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rez-next-common = { version = "0.3.4", path = "../rez-next-common" }
rez-next-package = { version = "0.3.4", path = "../rez-next-package" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
