[package]
name = "rez-next-package-cache"
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
license = "Apache-2.0"
description = "Package caching for rez-next"

[dependencies]
rez-next-common = { path = "../rez-next-common" }
rez-next-package = { path = "../rez-next-package" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"
