[package]
name = "rez-next-package-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Package caching for rez-next"

[dependencies]
rez-next-common = { version = "0.3.4", path = "../rez-next-common" }
rez-next-package = { version = "0.3.4", path = "../rez-next-package" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"
