[package]
name = "rez-next-package"
version = "0.3.5" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Advanced package management with complete package.py parsing and 100% Rez compatibility"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/loonghao/rez-next"
documentation = "https://docs.rs/rez-next-package"
readme = "README.md"
keywords = ["package", "rez", "parsing", "management", "python"]
categories = ["development-tools", "parsing", "filesystem"]
exclude = ["tests/fixtures/", "examples/"]

[dependencies]
rez-next-common = { version = "0.3.5", path = "../rez-next-common", default-features = false } # x-release-please-version
rez-next-version = { version = "0.3.5", path = "../rez-next-version", default-features = false } # x-release-please-version

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
glob = "0.3"
thiserror.workspace = true
tempfile.workspace = true
rustpython-parser = "0.4"
rustpython-ast = "0.4"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = { version = "2.0", features = ["serde"] }
base64 = "0.22"
toml = "1.0"
tracing.workspace = true
sha1 = "0.11"
fs2 = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
dunce = "1.0"

[lib]
name = "rez_next_package"
crate-type = ["rlib"]

[lints]
workspace = true
