[package]
name = "rez-next-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Python bindings for rez-next - drop-in replacement for rez Python API"
license.workspace = true
repository.workspace = true
keywords = ["rez", "python-bindings", "pyo3", "package-manager"]

[lib]
name = "rez_next_bindings"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
rez-next-common = { version = "0.1.0", path = "../rez-next-common" }
rez-next-version = { version = "0.1.0", path = "../rez-next-version" }
rez-next-package = { version = "0.1.0", path = "../rez-next-package" }
rez-next-solver = { version = "0.1.0", path = "../rez-next-solver" }
rez-next-repository = { version = "0.1.0", path = "../rez-next-repository" }
rez-next-context = { version = "0.1.0", path = "../rez-next-context" }
rez-next-build = { version = "0.1.0", path = "../rez-next-build" }
rez-next-rex = { version = "0.1.0", path = "../rez-next-rex" }
rez-next-suites = { version = "0.1.0", path = "../rez-next-suites" }
rez-next-bind = { version = "0.1.0", path = "../rez-next-bind" }
rez-next-search = { version = "0.1.0", path = "../rez-next-search" }
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
