[package]
name = "rez-next-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Python bindings for rez-next - drop-in replacement for rez Python API"
license.workspace = true
repository.workspace = true
keywords = ["rez", "python-bindings", "pyo3", "package-manager"]

[lib]
name = "rez_next_bindings"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
git = ["rez-next-build/git"]

[dependencies]
rez-next-common = { version = "0.3.0", path = "../rez-next-common" }
rez-next-version = { version = "0.3.0", path = "../rez-next-version" }
rez-next-package = { version = "0.3.0", path = "../rez-next-package" }
rez-next-solver = { version = "0.3.0", path = "../rez-next-solver" }
rez-next-repository = { version = "0.3.0", path = "../rez-next-repository" }
rez-next-context = { version = "0.3.0", path = "../rez-next-context" }
rez-next-build = { version = "0.3.0", path = "../rez-next-build" }
rez-next-rex = { version = "0.3.0", path = "../rez-next-rex" }
rez-next-suites = { version = "0.3.0", path = "../rez-next-suites" }
rez-next-bind = { version = "0.3.0", path = "../rez-next-bind" }
rez-next-search = { version = "0.3.0", path = "../rez-next-search" }
rez-next-package-cache = { version = "0.1.0", path = "../rez-next-package-cache" }
rez-next-serialise = { version = "0.3.0", path = "../rez-next-serialise" }
rez-next-util = { version = "0.1.0", path = "../rez-next-util" }
rez-next-package-filter = { version = "0.3.0", path = "../rez-next-package-filter" }
rez-next-release-hook = { version = "0.3.0", path = "../rez-next-release-hook" }
rez-next-explicit = { version = "0.1.0", path = "../rez-next-explicit" }
rez-next-config = { version = "0.3.0", path = "../rez-next-config" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = "0.11"
hex = "0.4"
ctor = "1.0"

[lints]
workspace = true
