[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rez-next"
version = "0.3.0"
description = "Next-generation Rez package manager - drop-in Python replacement"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
keywords = ["rez", "package-manager", "vfx", "pipeline", "environment"]

[project.urls]
Homepage = "https://github.com/loonghao/rez-next"
Documentation = "https://github.com/loonghao/rez-next"
Repository = "https://github.com/loonghao/rez-next"
Issues = "https://github.com/loonghao/rez-next/issues"

[tool.maturin]
# Build the cdylib as Python extension
features = ["pyo3/extension-module"]
# Python module name: native extension is installed as rez_next._native,
# so Python layer (python/rez_next/__init__.py) can do `from rez_next._native import *`
module-name = "rez_next._native"
# Python source directory: tells maturin where to find the Python package files
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

