[package]
name = "rez-next-release-hook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Release hook system for rez-next"

[dependencies]
# Workspace dependencies
rez-next-common = { version = "0.3.4", path = "../rez-next-common" }
rez-next-package = { version = "0.3.4", path = "../rez-next-package" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
