[package]
name = "rez-next-repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Repository scanning and caching for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-next-common = { path = "../rez-next-common" }
rez-next-version = { path = "../rez-next-version" }
rez-next-package = { path = "../rez-next-package" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
lru.workspace = true
thiserror.workspace = true
# Temporarily disabled Python bindings
# pyo3 = { workspace = true, optional = true }
async-trait = "0.1"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
# Performance optimization dependencies
memmap2 = "0.9"
ahash = "0.8"
smallvec = "1.15"
futures = "0.3"
dashmap = "6.1"
rayon.workspace = true
parking_lot = "0.12"
num_cpus = "1.17"

[features]
default = []
# Python bindings feature (defined to avoid warnings)
python-bindings = []  # No dependencies for now

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
serial_test.workspace = true
