[package]
name = "rez-next-rex"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rex command language implementation for rez-next"
license.workspace = true
repository.workspace = true

[lib]
name = "rez_next_rex"
crate-type = ["rlib"]

[dependencies]
rez-next-common = { version = "0.3.0", path = "../rez-next-common" }
rez-next-version = { version = "0.3.0", path = "../rez-next-version" }
serde = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
