[package]
name = "rez-next-serialise"
version = "0.3.5" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Package serialisation for rez-next"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true

# External dependencies
indexmap = "2.14"
toml = "1.0"

[dev-dependencies]
criterion.workspace = true
